2009-07-03 Pierre Wieser <pwieser@trychlos.org>

	Export actions.

	* src/common/nautilus-actions-config.c:
	* src/common/nautilus-actions-config.h:
	* src/common/nautilus-actions-config-gconf.c:
	* src/common/nautilus-actions-config-gconf.h:
	* src/common/nautilus-actions-config-gconf-private.h:
	* src/common/nautilus-actions-config-gconf-reader.c:
	* src/common/nautilus-actions-config-gconf-reader.h:
	* src/common/nautilus-actions-config-gconf-writer.c:
	* src/common/nautilus-actions-config-gconf-writer.h:
	* src/common/nautilus-actions-config-schema-writer.c:
	* src/common/nautilus-actions-config-schema-writer.h:
	* src/common/nautilus-actions-config-schema-reader.c:
	* src/common/nautilus-actions-config-schema-reader.h: Removed files.

	* src/common/Makefile.am: Updated accordingly.

	* src/common/na-action.h: Define an export format.

	* src/common/na-utils.c:
	* src/common/na-utils.h
	(na_utils_gslist_to_schema, na_utils_boolean_to_schema):
	New functions.

	* src/nact/nact-import-export.c:
	* src/nact/nact-import-export.h: Removed files.

	* src/nact/nact-gconf-schema.c:
	* src/nact/nact-gconf-schema.h:
	* src/nact/nact-gconf-schema-writer.c:
	* src/nact/nact-gconf-schema-writer.h: New files.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_connect):
	Removed function.

	* src/nact/nact-window.c:
	* src/nact/nact-window.h
	(nact_window_signal_connect_by_name): New function.

	* src/nact/nact-action-conditions-editor.c
	(nact_iprofile_conditions_initial_load): Use GtkBuilder size grouping.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h
	(nact_iactions_list_get_selected_actions,
	nact_iactions_list_set_multiple_selection): New functions.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h
	(nact_iprefs_get_export_folder_uri,
	nact_iprefs_save_export_folder_uri): New functions.

	* src/nact/nact-main-window.c: Implement export function.
