@@ -1,3 +1,8 @@
+2009-07-08 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/nact/nact-main-window.c:
+	Fix post-export selection mode.
+
 2009-07-03 Pierre Wieser <pwieser@trychlos.org>
 
 	Export actions.
